# queue-worker-service

./: Dockerfile  Makefile  README.md  __init__.py  config.py  container.py  docker-compose.yml  loki-config.yaml  main.py  model.py  prometheus.yml  promtail-config.yaml  pyproject.toml  pytest.ini  requirements.txt  setup.py  supervisord.conf
application/: interfaces.py  use_cases.py
domain/: entities.py
handlers/: match_handler.py
infrastructure/: repositories.py
src/: config.py  container.py  fast_api.py  logconfig.py  main.py
src/application/: interfaces.py  use_cases.py
src/domain/: entities.py  exceptions.py  value_objects.py
src/endpoints/: match_endpoints.py
src/handlers/: match_handler.py
src/infrastructure/: orm.py  repositories.py  services.py  unit_of_work.py
src/models/: __init__.py  match_models.py
tests/: conftest.py  test_container.py  test_curcuit_breaker.py  test_message_endpoints.py  test_message_request_handler.py  test_model.py  test_orm.py  test_prometheus_metrics_collector.py  test_rate_limiter.py  test_repositories.py
