[project]
name = "worker-service"
version = "0.6.4"
description = "Service for Managing Waiting Queue"
authors = [
    {name = "Gabriel Bouchard",email = "gabouchard2002@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "redis (>=7.0.1,<8.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "aio-pika (>=9.5.7,<10.0.0)",
    "faststream[rabbit] (>=0.6.3,<0.7.0)",
    "setuptools (>=80.9.0,<81.0.0)",
    "prometheus-client (>=0.23.1,<0.24.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "fastapi (>=0.121.0,<0.122.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "aiohttp (>=3.13.2,<4.0.0)",

]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-asyncio (>=1.2.0,<2.0.0)"
]
