[project]
name = "worker-service"
version = "0.8.4"
description = "Worker Queue Service for Matching"
authors = [
    {name = "Gabriel Bouchard",email = "gabouchard2002@gmail.com"}
]
readme = "README.md"
requires-python = "3.13.3"
dependencies = [
    "aiohttp (>=3.13.2,<4.0.0)",
    "faststream[rabbit] (>=0.6.3,<0.7.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "fastapi (>=0.121.3,<0.122.0)",
    "prometheus-client (>=0.23.1,<0.24.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "redis (>=7.1.0,<8.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "setuptools (>=80.9.0,<81.0.0)",
]
